Build a fraction tab: For fractions, split button should be on the left to match up with when the fraction is in the scoring cell.
Build a fraction tab: Fixed: Finished fractions (in target cells) still show when going to the next level
Build a fraction tab: Dragged items move to the front
Build a fraction tab: Fixed: After splitting a complete fraction, fraction skeleton not draggable.
Build a fraction tab: fixed: smiling face not shown after completing all questions
Build a fraction tab: Fixed fraction card size and location
Build a fraction tab: Shrink fraction when dropped in a target cell
Build a fraction tab: animate fractions to target cell when dropped in
Build a fraction tab: Fixed: Shouldn't be able to drop numbers into a fraction skeleton that is in the toolbox
Build a fraction tab: Fixed: Initial fraction skeleton should animate to toolbox location if dropped in toolbox, not back to the middle of the screen
Build a fraction tab: Show filled in fractions on a "card", have the card disappear when it drops in the scoring cell
Build a fraction tab: Made target cells a little smaller
Build a fraction tab: Made scoring cells have the same shade of gray as the toolbox
Build a fraction tab: Added a "split" button to completed fractions that appear in the scoring cells
Build a fraction tab: Fixed: Cards should go over (z-order) the target fraction red dotted line
Build a fraction tab: Removed card background when a card is dropped into a fraction
Build a fraction tab: Fixed: Fractions should pop out if put in a non-matching target cell
Build a fraction tab: Added fraction skeleton to the toolbox, and animate it out when the user solves a target (and doesn't already have another fraction skeleton in the play area)
Build a fraction tab: Fixed: When navigating back a level, it should remember if you solved the level and not create the level anew
Build a fraction tab: Fixed: Level text should accommodate double digits level size